<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sharedUserId" translate="false"><xliff:g id="x"></xliff:g></string>
    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>
    <string name="application_name">OPhone Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpaper gallery</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="configure_wallpaper">Configure</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_search">Search</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="add_search">Search</string>
    <string name="out_of_space">No enough room on this Home screen.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="all_apps_button_label">All applications</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Switch Home</string>
    <string name="menu_choose_home">Switch Home</string>
    <string name="menu_switch_to_2D">Switch to 2D</string>
    <string name="menu_switch_to_3D">Switch to 3D</string>
    <string name="menu_home_settings">Preference</string>
    <string name="setting_home_screen">Page Settings</string>
    <string name="setting_home_dock_style">Dock Style</string>
    <string name="setting_home_dock_style_summary">Bottom button layout\'s style</string>
    <string name="setting_home_dock_style_1">OMS</string>
    <string name="setting_home_dock_style_2">Google</string>
    <string name="setting_allapps_view_style">All Applications View</string>
    <string name="setting_allapps_view_style_summary">Set all applications view style</string>
    <string name="setting_allapps_view_style_2d_land">2D Landscape</string>
    <string name="setting_allapps_view_style_2d_port">2D Portrait</string>
    <string name="setting_allapps_view_style_3d">3D View</string>
    <string name="setting_pagemanager_view_style">Page Manager View</string>
    <string name="setting_pagemanager_view_style_summary">Set page manager view style</string>
    <string name="setting_pagemanager_view_style_2d">2D View</string>
    <string name="setting_pagemanager_view_style_3d">3D View</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>
    <string name="search_hint">Google Search</string>
    <string name="gadget_error_text">Loading widget</string>
    <string name="default_browser_url" translatable="false">
        http://www.google.com/m?client=ms-{CID}&amp;source=android-home-hotseat</string>
    <string name="webwidget_username">Name</string>
    <string name="webwidget_password">Password</string>
    <string name="webwidget_action">Sign in</string>
    <string name="webwidget_sign_in">Sign in</string>
    <string name="webwidget_cancel">Cancel</string>
    <string name="webwidget_ok">OK</string>
    <string name="webwidget_js_dialog_title">JavaScript</string>
    <string name="acl_access_message">Allow toolbox to access messaging?</string>
    <string name="acl_access_pim">Allow toolbox to access contacts/calendar?</string>
    <string name="acl_access_av_control">Allow toolbox to access muti-media?</string>
    <string name="acl_access_telephony">Allow toolbox to access telephony?</string>
    <string name="acl_access_device">Allow toolbox to access phone device?</string>
    <string name="acl_access_account">Allow toolbox to access personal account?</string>
    <string name="acl_access_filesystem">Allow toolbox to access file system?</string>
    <string name="acl_access_network">Allow toolbox to access network?</string>
    <string name="acl_access_application">Allow toolbox to access application?</string>
    <string name="acl_access_wifi">Allow toolbox to access WiFi?</string>
    <string name="acl_access_bt">Allow toolbox to access Bluetooth?</string>
    <string name="acl_title">Confirm Access</string>
    <string name="acl_btn_allow">Allow</string>
    <string name="acl_btn_deny">Deny</string>
    <string name="acl_access_denied">Access Denied</string>
    <string name="activity_picker_label">Select activity</string>
    <string name="snap_screen_nomore">No more</string>
    <string name="add_screen_max">Reach max screen count</string>
    <string name="remove_screen_min">At least one screen</string>
    <string name="add_one_screen">Add one screen</string>
    <string name="remove_one_screen">Remove screen:</string>
    <string name="page_format">Home %1$s</string>
    <string name="remove_screen_title">Delete this screen?</string>
    <string name="remove_screen_ok">OK</string>
    <string name="remove_screen_cancel">Cancel</string>
    <string name="setting_title">Home settings</string>
    <string name="setting_default_screen">Default screen settings</string>
    <string name="setting_default_screen_summary">Set default show screen</string>
    <string name="set_default_screen">Set Default</string>
    <string name="set_default_screen_hint">Set current screen as default screen</string>
    <string name="pref_delete_default_page_enable">Allow delete the first 3 screens</string>
    <string name="pref_2d_enable">Use 2D to explore all applications</string>
    <string name="application_shortcut_title_unknown">Unknown</string>
    <string name="in_of_space">tap on widget to confirm.</string>
    <string name="menu_app_edit">Edit</string>
    <string name="menu_category">New Category</string>
    <string name="action_bar_test1">Button 1</string>
    <string name="action_bar_test2">Button 2</string>
    <string name="category_all">All Apps</string>
    <string name="category_system">System Apps</string>
    <string name="category_carrier">CMCC Apps</string>
    <string name="category_oem">OEM Apps</string>
    <string name="category_3rd">User Apps</string>
    <string name="category_recentuse">Recently Used Applications</string>
    <string name="cate_edit_done">Done</string>
    <string name="category_noapp">No %1$s!</string>
    <string name="category_shortcut">Quick Launch*</string>
    <string name="remove_application_shortcut">Remove this shortcut?</string>
    <string name="remove_application_shortcut_ok">OK</string>
    <string name="remove_application_shortcut_cancel">Cancel</string>
    <string name="qa_page_manager">Screen Manager</string>
    <string name="qa_set_shortcuts">Set Quick Launcher</string>
    <string name="corpus_selection_heading">Search</string>
    <string name="corpus_label_global">All</string>
    <string name="app_entertainment">Entertain*</string>
    <string name="app_information">News*</string>
    <string name="app_tools">Tools*</string>
    <string name="app_shortcut">Short cut*</string>
    <string name="app_game">Games*</string>
    <string name="click_switch_category_hint">Click here switch category</string>
    <string name="select_category_title">Applications</string>
    <string name="noapps">No any application exists.</string>
    <string name="contact_author">Contact Developer</string>
    <string name="share_app">Share this app</string>
    <string name="pref_enable_landscape">Enable landscape</string>
    <string name="pref_enable_auto_add_screen">Enable auto add screen</string>
    <string name="pref_enable_show_add_quick">Show "Set quick launch"</string>
    <string name="will_take_effect_reboot">Need re-launch Home application</string>
    <string name="pref_enable_show_hint">Show category hint</string>
    <string name="pref_enable_show_colorful_bg">Show colorful bg</string>
    <string name="pref_enable_show_bg_allapp">Show background</string>
    <string name="setting_home_all_app">Application UI Settings</string>
    <string name="pref_enable_switch_updown">Move vertical switch category</string>
    <string name="pref_enable_show_top_bar">Show application top bar</string>
    <string name="pref_enable_alpha_order">Alphabetically order in drawer</string>
    <string name="setting_smothy_setting">Home screen smooth effect</string>
    <string name="setting_smothy_setting_summary">Select move smooth effect</string>
    <string name="pref_enable_always_move_wallpaper">Always move wall paper</string>
    <string name="pref_enable_always_transparent_bg">Translucent effect</string>
    <string name="pref_enable_always_move_wallpaper_summary">Low performance</string>
</resources>